--- a/whoami/middlewares.yaml
+++ b/whoami/middlewares.yaml
@@ -1,15 +1,35 @@
 apiVersion: traefik.io/v1alpha1
 kind: Middleware
 metadata:
-  name: waf
+  name: whoami-cas
   namespace: whoami
 spec:
   plugin:
-    coraza:
-      crsEnabled: true
-      directives:
-        - SecGeoLookupDb /geodb/GeoLite2-Country.mmdb
-        - SecRule REMOTE_ADDR "@geoLookup" "chain,id:22,drop,msg:'Non-JP IP address'"
-        - SecRule GEO:COUNTRY_CODE "!@streq JP"
-        # - Include /wafrules/crs.conf
-        # - Include @owasp_crs/REQUEST-910-IP-REPUTATION.conf
+    cas-auth:
+        casServerUrl: "https://keycloak.${CLUSTERNAME}.${DOMAINNAME}/realms/traefiklabs/protocol/cas"
+        allowedHosts: 
+          - "*.${CLUSTERNAME}.${DOMAINNAME}"
+        pathPatterns: 
+          - "/.*"
+        sessionTimeout: 24h
+---
+apiVersion: traefik.io/v1alpha1
+kind: Middleware
+metadata:
+  name: whoami-oidc
+  namespace: whoami
+spec:
+  plugin:
+    oidc:
+      issuer: "https://keycloak.${CLUSTERNAME}.${DOMAINNAME}/realms/traefiklabs"
+      redirectUrl: "/cback"
+      clientID: whoami-oidc
+      clientSecret: bdfbDPx3ysnvzcNwzvJFWHMPKnHVn79c
+      scopes:
+        - openid
+        - offline_access
+      session:
+        name: "%s-session"
+      forwardHeaders:
+        X-Traefik-User: preferred_username
+        X-Traefik-Group: groups
